<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingTop="60dp"
    android:paddingRight="40dp">

    <EditText
        android:id="@+id/etAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/white_circle"
        android:hint="@string/accountHInt"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvAccountHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/holo_red_dark" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_circle"
        android:hint="@string/passwordHint"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions|textPassword"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvPasswordHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/holo_red_dark" />

    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_circle"
        android:hint="@string/passwordConfirmHint"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions|textPassword"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvPasswordConfirmHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/holo_red_dark" />

    <Button
        android:id="@+id/btRegister"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_circle"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <ProgressBar
        android:id="@+id/pbState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone" />
</LinearLayout>